Fri Jun 06 00:14:13 BST 2003  Richard Boulton <richard@tartarus.org>

	* omindex.cc: Clean up processing of HTML documents:
	  - Ignore the contents of <script> and <style> tags in HTML.
	  - Strip initial whitespace in each tag in an HTML document.
	  - Try not to split words in half when truncating title and
	    summary.

Tue Jun 03 11:15:28 BST 2003  Olly Betts <olly@survex.com>

	* templates/query: Create log entry in query.log.

Thu May 29 18:03:54 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Fixed bug in DEFAULT_LOG_ENTRY's Omegascript.

Thu May 29 00:22:28 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Set STEM_LANGUAGE near the start of the file so it's easy
	  for users to change until we get better configurability.

Thu May 29 00:00:28 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,date.cc,date.h,query.cc: Split code to build a
	  date range filter into a separate file.

Wed May 28 23:38:02 BST 2003  Olly Betts <olly@survex.com>

	* configfile.cc,configfile.h,omega.cc,omega.conf,query.cc,query.h,
	  docs/omegascript.txt,docs/overview.txt,docs/quickstart.txt:
	  Replaced half-hearted logging support with flexible
	  OmegaScript-based approach with new $log command.  Also added
	  $now to allow the current date/time to be logged.

Tue May 27 17:55:24 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Added missing "#include <assert.h>".

Mon May 26 22:41:26 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Don't use libtool; Use AC_CONFIG_FILES - it's the new
	  autoconf way!
			  
Mon May 26 12:12:22 BST 2003  Olly Betts <olly@survex.com>

	* omega.spec.in: Removed %changelog - it hasn't been reliably updated
	  and only really makes sense when the packaging is done by a third
	  party anyway.

Mon May 26 12:01:55 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: If the query is empty, don't bother running it through
	  enquire.

Wed Apr 30 01:18:47 BST 2003  Olly Betts <olly@survex.com>
